--- a/templates/variant.html
+++ b/templates/variant.html
@@ -146,9 +146,9 @@
                         {% else %}
                             <h5><span class="label label-warning">Warning!</span>
                         {% endif %}
-                        This variant is found in phase with <a href="/variant/{{ mnp.site2 }}">{{ mnp.site2 }}</a>
+                        This variant is found in phase with <a href="/exac/variant/{{ mnp.site2 }}">{{ mnp.site2 }}</a>
                         {% if mnp.site3 %}
-                            and <a href="/variant/{{ mnp.site3 }}">{{ mnp.site3 }}</a>
+                            and <a href="/exac/variant/{{ mnp.site3 }}">{{ mnp.site3 }}</a>
                         {% endif %}
                         in {{ mnp.number_samples }} individual{% if mnp.number_samples > 1 %}s{% endif %}{% if mnp.category != 'UNCHANGED' %}, altering its functional interpretation</h5>{% endif %}.
                     {% endfor %}
@@ -161,7 +161,7 @@
                     {% for allele in variant.orig_alt_alleles %}
                         {% if allele != variant.variant_id %}
                             <li>
-                                <a href="/variant/{{ allele }}">{{ allele }}</a>
+                                <a href="/exac/variant/{{ allele }}">{{ allele }}</a>
                             </li>
                         {% endif %}
                     {% endfor %}
@@ -479,7 +479,7 @@
                                 type: 'bam',
                                 indexed: true,
                                 alignmentShading: 'strand',
-                                url: '/read_viz/' + read_viz_data[het_or_hom_or_hemi]['urls'][i],
+                                url: '/exac/read_viz/' + read_viz_data[het_or_hom_or_hemi]['urls'][i],
                                 name: het_or_hom_or_hemi + ' #' + (i + 1),
                                 height: 300,
                                 minHeight: 300,
@@ -524,12 +524,12 @@
                         //initialize IGV tracks
                         var tracks = [];
                         tracks.push({
-                            url: '/read_viz/gencode.v19.sorted.bed',
+                            url: '/exac/read_viz/gencode.v19.sorted.bed',
                             name: "gencode v19",
                             displayMode: "SQUISHED"
                         });
-                        //tracks.push({ url: '/read_viz/exome_calling_regions.v1.bed', name: "ExAC calling regions" });
-                        //tracks.push({ url: '/read_viz/self_chain.sorted.bed',        name: "UCSC self chain" });
+                        //tracks.push({ url: '/exac/read_viz/exome_calling_regions.v1.bed', name: "ExAC calling regions" });
+                        //tracks.push({ url: '/exac/read_viz/self_chain.sorted.bed',        name: "UCSC self chain" });
 
                         if (location.hash == '#all') {
                             //add all available tracks for het and hom and hide the 'load +1' buttons
