--- a/templates/variant_consequences.html
+++ b/templates/variant_consequences.html
@@ -11,7 +11,7 @@
 <ul>
     {% for gene in consequences[consequence] %}
         <li>
-            <a href="/gene/{{ gene }}">
+            <a href="/exac/gene/{{ gene }}">
             {% if consequences[consequence][gene][0].SYMBOL %}
                 {{ consequences[consequence][gene][0].SYMBOL }}
             {% else %}
@@ -27,7 +27,7 @@
                     <ul class="dropdown-menu" role="menu" aria-labelledby="transcript_dropdown">
                         {% for annotation in consequences[consequence][gene] %}
                             <li role="presentation">
-                                <a role="menuitem" tabindex="-1" href="/transcript/{{ annotation.Feature }}">
+                                <a role="menuitem" tabindex="-1" href="/exac/transcript/{{ annotation.Feature }}">
                                     {{ annotation.Feature }}
                                     {% if annotation.CANONICAL == 'YES' %}
                                         *
@@ -40,7 +40,7 @@
                 </span>
             {% else %}
                 {% set annotation = consequences[consequence][gene][0] %}
-                 - <a href="/transcript/{{ annotation.Feature }}">
+                 - <a href="/exac/transcript/{{ annotation.Feature }}">
                     {{ annotation.Feature }}
                     {% if annotation.CANONICAL == 'YES' %}
                         *
