--- a/templates/variant_details.html
+++ b/templates/variant_details.html
@@ -1,13 +1,7 @@
 {% if consequence == 'missense_variant' %}
-    ({{ annotation.HGVS }})<br/>
-    &nbsp; &nbsp; &nbsp; Polyphen:
-    {% set polyphen = annotation.PolyPhen.split('(')[0] %}
-    {% set pp_label = "bg-success" if polyphen == 'benign' else ("bg-warning" if polyphen == 'possibly_damaging' else "bg-danger") %}
-    {% set sift = annotation.SIFT.split('(')[0] %}
-    {% set sift_label = "bg-success" if sift == 'tolerated' else "bg-danger" %}
-    <span class={{ pp_label }}>{{ polyphen }}</span>; SIFT:
-    <span class={{ sift_label }}>{{ sift }}</span>
-{% elif annotation.LoF != '' %}
+    ({{ annotation.HGVS_p }})<br/>
+    
+<!-- {% elif annotation.LoF != '' %}
     ({{ annotation.HGVS }})<br/>
     &nbsp; &nbsp; &nbsp; LoF:
     {% if annotation.LoF == 'HC' %}
@@ -17,5 +11,5 @@
     {% endif %}
     {% if annotation.LoF_flags != '' %}
         <br/>&nbsp; &nbsp; &nbsp; Flag: <span class="bg-warning" data-tooltip="Flagged by LOFTEE (see FAQ)">{{ annotation.LoF_flags }}</span>
-    {% endif %}
+    {% endif %} -->
 {% endif %}
