--- a/templates/variant_table.html
+++ b/templates/variant_table.html
@@ -46,6 +46,7 @@
             "feature_elongation",
             "feature_truncation",
             "intergenic_variant",
+            "intergenic_region",
         ""];
 
         // Make a map of consequence -> index
@@ -159,6 +160,6 @@
     });
 </script>
 <div id="variants_loading">Loading variants...</div>
-<div id="variants_table_container" style="display: none;"></div>
+<div id="variants_table_container"></div>
 <div id="variants_table_empty" style="display: none;">No variants found.</div>
 {% endblock %}
