Fixed bug with autocompletion URL call.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
             var bestPictures = new Bloodhound({
               datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
               queryTokenizer: Bloodhound.tokenizers.whitespace,
-              remote: 'autocomplete/%QUERY'
+              remote: '/exac/autocomplete/%QUERY'
             });
 
             bestPictures.initialize();
